# gaf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: args.rs  git.rs  main.rs  parser.rs
