[package]
authors = ["Axlefublr"]
license = "MIT"
description = "A way to stage/unstage a specific type of git change."
readme = "README.md"
documentation = "https://docs.rs/gaf"
homepage = "https://github.com/Axlefublr/gaf"
repository = "https://github.com/Axlefublr/gaf"
name = "gaf"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
regex = "1.9.3"
